Fixed form input layout issues between FF and Chrome

--- a/Accounting/css/index.css
+++ b/Accounting/css/index.css
@@ -117,4 +117,5 @@
 }
 .ui-datepicker-trigger{
   vertical-align: text-top !important;
+  margin-left: 2px;
 }
